fix: handle overflow

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
 }
 
 body {
-  max-height: 100vh;
+  min-height: 100vh;
   margin: 0;
   font-family: Mitr, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -70,7 +70,7 @@ h2 {
   flex: 0 1 500px;
   max-width: 100%;
   overflow-x: hidden;
-  max-height: 100vh;
+  min-height: 100vh;
   padding: 0px 20px;
   justify-content: center;
   background-color: var(--pm);
